build(deps): Bump jacoco-maven-plugin from 0.8.8 to 0.8.9 (#672)
* build(deps): Bump jacoco-maven-plugin from 0.8.8 to 0.8.9

Bumps [jacoco-maven-plugin](https://github.com/jacoco/jacoco) from 0.8.8 to 0.8.9.
- [Release notes](https://github.com/jacoco/jacoco/releases)
- [Commits](https://github.com/jacoco/jacoco/compare/v0.8.8...v0.8.9)

---
updated-dependencies:
- dependency-name: org.jacoco:jacoco-maven-plugin
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fix freshly appeared issues (can't pin them down to JaCoCo, the enum one was just stupid and wrong)

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Michael Simons <michael.simons@neo4j.com>